--- a/.vercel/output/functions/render.func/src/content/pages/elements.mdx
+++ b/.vercel/output/functions/render.func/src/content/pages/elements.mdx
@@ -101,7 +101,7 @@ Some text to show that the reference links can follow later.
     <a class="nav-link" href="/">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="about/">About</a>
+    <a class="nav-link" href="background/">background</a>
   </li>
 </ul>
 `}
